Timewarp NPC in Panselo

--- a/PhoA_AP_client.csproj
+++ b/PhoA_AP_client.csproj
@@ -41,4 +41,8 @@
     <EmbeddedResource Include="assets/apSpriteUseful.png"/>
     <EmbeddedResource Include="assets/apSpriteFiller.png"/>
   </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="assets\customlevels\*.xml"/>
+  </ItemGroup>
 </Project>
